# aituring

./: Dockerfile  Makefile  README.md  docker-compose.yaml  docker.env  manage.py  pyproject.toml
apps/core/admin/: __init__.py  audit_log.py  category.py  city.py  client.py  country.py  report.py
apps/core/migrations/: 0001_initial.py
apps/core/models/: __init__.py  audit_log.py  category.py  city.py  client.py  country.py  report.py
apps/user/: apps.py
apps/utils/: __init__.py  model.py
config/: variables.py
config/settings/: base.py
