[tool.poetry]
name = "aituring"
version = "0.1.0"
description = ""
authors = ["Argenis Vargas <argenis.vargas@crehana.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^7.4.4"
pytest-django = "^4.7.0"
factory-boy = "^3.3.0"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
